--- a/main-window.ui
+++ b/main-window.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>974</width>
+    <width>1270</width>
     <height>865</height>
    </rect>
   </property>
@@ -19,7 +19,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>951</width>
+      <width>1241</width>
       <height>401</height>
      </rect>
     </property>
@@ -103,6 +103,29 @@ border-color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
       <string>Обратная польская запись</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>940</x>
+       <y>10</y>
+       <width>241</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>PHP</string>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="phpOutput">
+     <property name="geometry">
+      <rect>
+       <x>940</x>
+       <y>30</y>
+       <width>291</width>
+       <height>361</height>
+      </rect>
      </property>
     </widget>
    </widget>
@@ -216,7 +239,7 @@ border-color: rgb(0, 0, 0);</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>974</width>
+     <width>1270</width>
      <height>21</height>
     </rect>
    </property>
